# the-farmer-was-replaced

./: .gitignore  flake.nix  main.py  pyproject.toml  smart_move.py  smart_plant.py
src/: config.py  env.py  main.py  plant_order.py  smart_move.py  smart_plant.py  smart_tile.py
